core/roboconf-core/src/test/resources/configurations/invalid/instanceof-extra-char.instances
instance of server { failed comment
	name: server1;
}
